# rag-with-generated-eval

./: .gitignore  README.md  app.py  architecture.md  pyproject.toml
src/: embedding.py  ollama.py  ragas_eval.py  streamlit_patch.py  utils.py
